scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Deliverable__c/Demo_Project_Deliverable__c.object-meta.xml
<CustomObject>
    <label>Demo Deliverable</label>
    <pluralLabel>Demo Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>