scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Deliverable__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <label>Accepted By</label>
    <type>Text</type>
    <length>120</length>
</CustomField>