scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Deliverable__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                    <default>true</default>
                    <label>Documentation</label>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>