scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Deliverable__c/fields/Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Date__c</fullName>
    <label>Delivered Date</label>
    <type>Date</type>
</CustomField>