scripts/demo/sdocs/schema/force-app/main/default/objects/Demo_Project_Deliverable__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Lookup</type>
    <referenceTo>Demo_Project__c</referenceTo>
    <relationshipName>Deliverables</relationshipName>
    <relationshipLabel>Deliverables</relationshipLabel>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>